--- a/multi_thread_server/html/index.html
+++ b/multi_thread_server/html/index.html
@@ -28,6 +28,6 @@
   <footer>
     time flies
   </footer>
-  <script src="addtext.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
